2000-03-28  Christopher James Lahey  <clahey@helixcode.com>

	* addressbook/backend/pas/pas-backend-file.c: Removed an infinite
	loop.

	* addressbook/backend/ebook/test-client-list.c: New test that
	doesn't add an extra database item.

	* addressbook/backend/ebook/Makefile.am,
	addressbook/backend/ebook/.cvsignore: Added test-client-list.

2000-03-28  Christopher James Lahey  <clahey@helixcode.com>

	* addressbook/backend/pas/pas-card-cursor.c: Fixed memory
	allocation.

	* addressbook/backend/pas/pas-backend-file.c: Fixed memory
	allocation.  Made database stuff not do an extra entry.

	* addressbook/backend/ebook/test-client.c: Add test for
	get_all_cards functionality.  Changed database name to test.db.

	* addressbook/backend/ebook/e-card-cursor.c: Changed bonobo_object
	to gtk_object in a couple of places.

2000-03-28  Chris Toshok  <toshok@laptoph.xtoph.org>

	* addressbook/backend/pas/pas-backend-file.c
	(pas_backend_file_create_unique_id): create id's for entries using
	the following format: ("pas-id-%08lX%08X", time(NULL), c++).
	
2000-03-27  Miguel de Icaza  <miguel@gnu.org>

	* widgets/shortcut-bar/e-icon-bar.c (flatten_alpha): New function,
	used to flatten the images we get and composite them with the
	background. 
	(e_icon_bar_add_item): One happy tigert comming.

2000-03-27  Dan Winship  <danw@helixcode.com>

	* tests/test-movemail.c: new test program. Can be used to copy POP
	mail into your evolution inbox.

2000-03-27  Chris Toshok  <toshok@laptoph.xtoph.org>

	* addressbook/backend/pas/pas-backend-file.c
	(pas_backend_file_get_vcard): remove unneeded g_strdup;
	(get_length): implement function.
	(get_nth): implement function.
	(cursor_destroy): free up the internal glist of vcards, and fix
	warning.
	(pas_backend_file_build_all_cards_list): new function, to build up
	the list of cards in the db.
	(pas_backend_file_process_get_all_cards): call
	pas_backend_file_build_+all_cards_list, and fix warning.
