@@ -1,3 +1,9 @@
+2000-03-28  Chris Toshok  <toshok@laptoph.xtoph.org>
+
+	* addressbook/backend/pas/pas-backend-file.c
+	(pas_backend_file_build_all_cards_list): remove unnecessary
+	strdup/free.
+
 2000-03-28  Christopher James Lahey  <clahey@helixcode.com>
 
 	* addressbook/backend/pas/pas-backend-file.c: Removed an infinite
